2002-09-02  Matti Aarnio  <mea@zmailer.org>

	* libc/Makefile.in, libresolv/Makefile.in, router/Makefile.in,
	  router/libdb/Makefile.in, scheduler/Makefile.in,
	  smtpserver/Makefile.in, transports/hold/Makefile.in,
	  transports/libta/Makefile.in, transports/mailbox/Makefile.in,
	  transports/reroute/Makefile.in, utils/makedb/Makefile.in,
	  utils/vacation/Makefile.in:
	    Modified usage of  @GENINCL@  autoconfig macro so that it
	    will always be the LAST inclusion define for the each
	    compilation.  This way if the (as has happened to yours
	    truly) GENINCL ( /usr/local/include ) has a file with
	    same name as something important ZMailer internal (mail.h
	    from UW-IMAP C-client), it won't override internal file..

	* proto/cf/fqdnalias.cf:
	    When doing  fqdnroute  processing on a "plus-full"
	    address, pass proper parameters to the database lookup.

	* include/zmsignal.h, router/daemonsub.c, router/db.c,
	  router/router.c, router/rfc822.c:
	    Observed certain kind of difficulties at abruptly
	    closed database accesses -- SleepyCat DB 3.x CDS
	    goes into bad lock state, unless properly cleaned
	    after with atexit().

	* transports/sm/sm.c:
	    Do similar X-***: header processings as the 'mailbox'
	    does for ORCPT, EnvelopeID, and Envelope-To.
	    Streamline a bit separatorsequence processing.

2002-09-01  Matti Aarnio  <mea@zmailer.org>

	* lib/rfc822scan.c, router/functions.c, router/rfc822.c:
	    Removed code (for printaliases function) that is no longer
	    used, observed situations, when the malformed headers
	    can be split by ZMailer.

	* smtpserver/mxverify.c:
	    When doing varioud "RBL" lookups, always catenate a "."
	    into end of the lookup domain in order to suppress
	    unnecessary "search" work by the resolver libraries.
	    Doing:  _res.options &= ~RES_DNSRCH;  might do it too...

	* smtpserver/smtpcmds.c:
	    Noticed that in unused code there is potential for